# predmarket-arb

./: .env.example  .gitignore  pyproject.toml  spike.py
pmarb/: __init__.py  config.py  credentials.py  fees.py  main.py
pmarb/backtest/: __init__.py  backtest.py
pmarb/detection/: __init__.py  spread.py
pmarb/feeds/: __init__.py  _util.py  auth.py  base.py  kalshi.py  polymarket.py
pmarb/matching/: __init__.py  futures.py  matcher.py  structured.py
pmarb/models/: __init__.py  market.py
pmarb/oplog/: __init__.py  logger.py
scripts/: export_candidates.py  run_detector.py  verify_auth.py
tests/: test_fees.py  test_futures.py  test_kalshi_feed.py  test_logger.py  test_market.py  test_matcher.py  test_polymarket_feed.py  test_spread.py  test_structured.py
